# src/io_endpoint/endpoint_dispatcher.rs
@@ -11,13 +11,14 @@ impl EndpointDispatcher {
         EndpointDispatcher {}
     }
 
-    pub async fn get_all(&self) -> Vec<EndpointSpec> {
-        vec![self.get_endpoint("11-22-33").await]
+    pub async fn get_all(&self, _peer_uid: &str) -> Vec<EndpointSpec> {
+        vec![self.get_endpoint("11-22-33", "44-55-66").await]
     }
 
-    pub async fn get_endpoint(&self, uid: &str) -> EndpointSpec {
+    pub async fn get_endpoint(&self, peer_uid: &str, endpoint_uid: &str) -> EndpointSpec {
         EndpointSpec {
-            endpoint_uuid: uid.into(),
+            peer_uid: peer_uid.into(),
+            endpoint_uid: endpoint_uid.into(),
             endpoint_type: EndpointType::SystemDevice,
             stream_direction: EndpointDir::Output,
             driver: EndpointDriver::Pipewire,
